<resources>
    <string name="app_name">消息监听</string>
    <string name="monitor_start">开始监听</string>
    <string name="alarm_stop">停止闹铃</string>
    <string name="speak">%1$s  %2$s：%3$s</string>


    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">观众</string>
    <string name="nav_header_subtitle">https://github.com/wshychbydh</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="share">分享</string>
    <string name="share_link">分享链接</string>
    <string name="share_code">分享二维码</string>
    <string name="info">个人信息</string>
    <string name="history">历史消息</string>
    <string name="attention">我的关注</string>
    <string name="attention_platform">关注平台</string>
    <string name="introduce">自我介绍</string>
    <string name="qq">QQ</string>
    <string name="wx">微信</string>
    <string name="short_msg">短信</string>
    <string name="phone">电话</string>
    <string name="other">其他</string>
    <string name="platform_select">请选择监听的平台：</string>
    <string name="people_add">该平台已添加的监听人：</string>
    <string name="match_all">全匹配</string>
    <string name="name_input">请输入需要添加的名称</string>
    <string name="function_complete">功能完善中...</string>
    <string name="submit">提交</string>
    <string name="name_added">该名字已添加</string>

    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="warn_pompt">温馨提示</string>
    <string name="no_market_find">您的手机没有安装Android应用市场</string>
    <string name="delete_tips">确定要删除吗？</string>
    <string name="user_monitor_add">添加监听用户</string>
    <string name="function">功能</string>
    <string name="message_obtain">%1$s：%2$s</string>
</resources>
