<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".business.notify.view.AttentionAddActivity">

    <com.cool.eye.notify.view.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:submit="@string/submit"
        app:submitColor="@color/colorPrimary"
        app:title="@string/user_monitor_add" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name_input" />

        <CheckBox
            android:id="@+id/cb_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_all" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:paddingStart="@dimen/margin_b"
        android:paddingTop="@dimen/padding_l"
        android:text="@string/platform_select"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_l"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/padding_l">

        <RadioButton
            android:id="@+id/qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_b"
            android:text="@string/qq"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/wx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_b"
            android:text="@string/wx" />

        <RadioButton
            android:id="@+id/shortMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_b"
            android:text="@string/short_msg" />

        <RadioButton
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_b"
            android:text="@string/phone" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_b"
            android:text="@string/other" />
    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_l"
        android:background="@android:color/white"
        android:padding="@dimen/margin_b"
        android:text="@string/people_add" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:overScrollMode="never"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:scrollbars="none" />
</LinearLayout>